# rpcs1-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  chatgpt-app-submission.json  glama.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-mcp-registry.yml  publish-sdk.yml  test-sdk.yml  test-web.yml
docs/: AI_AGENT_BUSINESS_GUIDE.md  ARCHITECTURE.md  BUYER_LANGUAGE.md  DEPLOYMENT.md  LAUNCH_PLAYBOOK.md  person-conditioned-priors.md  registry-submissions.md
scripts/: build-all.mjs  build-battery-v3.py  build-battery-v4.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: anthropic_integration.py  basic_usage.py  trading_ea_bridge.py
sdk/python/src/rpcs1/: __init__.py  adapters.py  analysis.py  matching.py  platforms.py  primitives.py  recommend.py  types.py
sdk/python/src/rpcs1/config/: neurotypes.json
sdk/python/src/rpcs1/integrations/: __init__.py  anthropic.py  openai.py
sdk/python/src/rpcs1/translator/: __init__.py  diagnostic_report.py  interpreter.py  memory.py  persona.py  rewriter.py  router.py  scoring.py  server.py
sdk/python/tests/: conftest.py  test_adapters.py  test_parity.py  test_primitives.py  test_recommend.py
skills/rpcs1-translation-layer/: SKILL.md
